# C_Servers

./: .gitignore  CMakeLists.txt  C_Servers.pro  Documentación - Brandon Dinarte, Julian Salinas.docx  list.c  list.h  main.c  readme.md  util.c  util.h
Docs/: index.md  readme.md
Errors/: 204.html  400.html  415.html  500.html
Files/: favicon.html  test2.html
Headers/: client.h  http.h  list.h  main.h  server.h  server_a.h  server_f.h  server_k.h  server_p.h  server_t.h  tests.h  util.h
Headers/Util/: tests.h  util.h
Sources/: client.c  http.c  list.c  main.c  server.c  server_f.c  server_k.c  server_p.c  server_t.c  tests.c  util.c
Sources/Util/: tests.c  util.c
TFiles/: test5.txt
Templates/: 400.html  404.html
docs/: index.md
